--- a/plugin-btn-smile/src/main/res/values/strings.xml
+++ b/plugin-btn-smile/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ZN Plugin Smile</string>
+    <string name="app_name">ZN Plugin Donation</string>
 </resources>
