+ Share text from any activity in TextUtilsActivity

--- a/plugin-btn-textutils/src/main/res/values/strings.xml
+++ b/plugin-btn-textutils/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ZN Plugin TextUtils</string>
+    <string name="intent_share_text">Text Utils!</string>
 </resources>
