--- a/plugin-btn-todotxt/src/main/res/values/strings.xml
+++ b/plugin-btn-todotxt/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ZN Plugin TodoTxt</string>
+    <string name="app_name">ZN Plugin Todo.txt</string>
 </resources>
