feat: ocr plugin download languages

--- a/plugin-btn-ocr/src/main/res/values/strings.xml
+++ b/plugin-btn-ocr/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ZN Plugin OCR</string>
+    <string name="prefs_ocr_languages_key">prefs_ocr_languages_key</string>
+    <string name="prefs_ocr_page_segmentation_mode_key">prefs_ocr_page_segmentation_mode_key</string>
+    <string name="prefs_ocr_pre_process_image_key">prefs_ocr_pre_process_image_key</string>
+    <string name="prefs_ocr_pre_process_image_enhance_contrast_key">prefs_ocr_pre_process_image_enhance_contrast_key</string>
+    <string name="prefs_ocr_pre_process_image_unshare_masking_key">prefs_ocr_pre_process_image_unshare_masking_key</string>
+    <string name="prefs_ocr_pre_process_image_otsu_threshold_key">prefs_ocr_pre_process_image_OTSU_threshold_key</string>
+    <string name="prefs_ocr_pre_process_image_deskew_image_key">prefs_ocr_pre_process_image_deskew_image_key</string>
 </resources>
