feat: speech2text plugin : option to change recognition language

--- a/plugin-btn-speech2text/src/main/res/values/strings.xml
+++ b/plugin-btn-speech2text/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Speech to Text</string>
+    <string name="app_name">ZN Plugin Speech to Text</string>
+    <string name="prefs_language_key">prefs_language_key</string>
 </resources>
