feat: AI-chat - allow user to change api url and model

--- a/plugin-btn-chat-ai/src/main/res/values/strings.xml
+++ b/plugin-btn-chat-ai/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="prefs_system_prompt_key" translatable="false">prefs_system_prompt_key</string>
     <string name="prefs_register_key" translatable="false">prefs_register_key</string>
     <string name="prefs_api_key" translatable="false">prefs_api_key</string>
-    <string name="prefs_gpt_4_model_key" translatable="false">prefs_gpt_4_model_key</string>
+    <string name="prefs_api_url_key" translatable="false">prefs_api_url_key</string>
+    <string name="prefs_default_api_url" translatable="false">https://api.openai.com</string>
+    <string name="prefs_api_model_key" translatable="false">prefs_api_model_key</string>
+    <string name="prefs_custom_model_key" translatable="false">prefs_custom_model_key</string>
 </resources>
